[ADD]rutas de los componentes y formulario de actor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
 
     <!-- Contenedor del contenido ajustado -->
     <div style="margin-left: 16rem; padding: 1rem; flex: 1; overflow-y: auto; margin-top: 4rem;">
-      <router-outlet />
-      <app-actor></app-actor>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
