--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a routerLink="/" class="brand-link">
+    <a href="/" class="brand-link">
       <img src="assets/adminlte/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">CineAdminLTE</span>
     </a>
@@ -10,7 +10,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" role="menu">
             <!-- Actores -->
             <li class="nav-item">
-                <a routerLink="crud/actors" class="nav-link">
+                <a href="crud/actors" class="nav-link">
                     <i class="nav-icon fas fa-user"></i>
                     <p>Actores</p>
                 </a>
@@ -18,7 +18,7 @@
     
             <!-- Clientes -->
             <li class="nav-item">
-                <a routerLink="crud/customers" class="nav-link">
+                <a href="crud/customers" class="nav-link">
                     <i class="nav-icon fas fa-users"></i>
                     <p>Clientes</p>
                 </a>
@@ -26,7 +26,7 @@
     
             <!-- Películas -->
             <li class="nav-item">
-                <a routerLink="crud/films" class="nav-link">
+                <a href="crud/films" class="nav-link">
                     <i class="nav-icon fas fa-film"></i>
                     <p>Películas</p>
                 </a>
@@ -34,7 +34,7 @@
     
             <!-- Película-Actor -->
             <li class="nav-item">
-                <a routerLink="crud/film_actor" class="nav-link">
+                <a href="crud/film_actor" class="nav-link">
                     <i class="nav-icon fas fa-user-tag"></i>
                     <p>Película-Actor</p>
                 </a>
@@ -42,7 +42,7 @@
     
             <!-- Película-Categoría -->
             <li class="nav-item">
-                <a routerLink="crud/film_category" class="nav-link">
+                <a href="crud/film_category" class="nav-link">
                     <i class="nav-icon fas fa-list"></i>
                     <p>Película-Categoría</p>
                 </a>
@@ -50,7 +50,7 @@
     
             <!-- Película-Texto -->
             <li class="nav-item">
-                <a routerLink="crud/film_text" class="nav-link">
+                <a href="crud/film_text" class="nav-link">
                     <i class="nav-icon fas fa-file-alt"></i>
                     <p>Película-Texto</p>
                 </a>
@@ -58,7 +58,7 @@
     
             <!-- Inventario -->
             <li class="nav-item">
-                <a routerLink="crud/inventories" class="nav-link">
+                <a href="crud/inventories" class="nav-link">
                     <i class="nav-icon fas fa-box"></i>
                     <p>Inventario</p>
                 </a>
@@ -66,7 +66,7 @@
     
             <!-- Pagos -->
             <li class="nav-item">
-                <a routerLink="crud/payments" class="nav-link">
+                <a href="crud/payments" class="nav-link">
                     <i class="nav-icon fas fa-dollar-sign"></i>
                     <p>Pagos</p>
                 </a>
@@ -74,7 +74,7 @@
     
             <!-- Renta -->
             <li class="nav-item">
-                <a routerLink="crud/rentals" class="nav-link">
+                <a href="crud/rentals" class="nav-link">
                     <i class="nav-icon fas fa-receipt"></i>
                     <p>Renta</p>
                 </a>
@@ -82,7 +82,7 @@
     
             <!-- Personal -->
             <li class="nav-item">
-                <a routerLink="crud/staff" class="nav-link">
+                <a href="crud/staff" class="nav-link">
                     <i class="nav-icon fas fa-user-tie"></i>
                     <p>Personal</p>
                 </a>
