--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,95 +1,138 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="/" class="brand-link">
-      <img src="assets/adminlte/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">CineAdminLTE</span>
+        <img src="assets/adminlte/dist/img/AdminLTELogo.png" alt="AdminLTE Logo"
+            class="brand-image img-circle elevation-3" style="opacity: .8">
+        <span class="brand-text font-weight-light">CineAdminLTE</span>
     </a>
     <div class="sidebar">
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" role="menu">
-            <!-- Actores -->
-            <li class="nav-item">
-                <a href="crud/actors" class="nav-link">
-                    <i class="nav-icon fas fa-user"></i>
-                    <p>Actores</p>
-                </a>
-            </li>
-    
-            <!-- Clientes -->
-            <li class="nav-item">
-                <a href="crud/customers" class="nav-link">
-                    <i class="nav-icon fas fa-users"></i>
-                    <p>Clientes</p>
-                </a>
-            </li>
-    
-            <!-- Películas -->
-            <li class="nav-item">
-                <a href="crud/films" class="nav-link">
-                    <i class="nav-icon fas fa-film"></i>
-                    <p>Películas</p>
-                </a>
-            </li>
-    
-            <!-- Película-Actor -->
-            <li class="nav-item">
-                <a href="crud/film_actor" class="nav-link">
-                    <i class="nav-icon fas fa-user-tag"></i>
-                    <p>Película-Actor</p>
-                </a>
-            </li>
-    
-            <!-- Película-Categoría -->
-            <li class="nav-item">
-                <a href="crud/film_category" class="nav-link">
-                    <i class="nav-icon fas fa-list"></i>
-                    <p>Película-Categoría</p>
-                </a>
-            </li>
-    
-            <!-- Película-Texto -->
-            <li class="nav-item">
-                <a href="crud/film_text" class="nav-link">
-                    <i class="nav-icon fas fa-file-alt"></i>
-                    <p>Película-Texto</p>
-                </a>
-            </li>
-    
-            <!-- Inventario -->
-            <li class="nav-item">
-                <a href="crud/inventories" class="nav-link">
-                    <i class="nav-icon fas fa-box"></i>
-                    <p>Inventario</p>
-                </a>
-            </li>
-    
-            <!-- Pagos -->
-            <li class="nav-item">
-                <a href="crud/payments" class="nav-link">
-                    <i class="nav-icon fas fa-dollar-sign"></i>
-                    <p>Pagos</p>
-                </a>
-            </li>
-    
-            <!-- Renta -->
-            <li class="nav-item">
-                <a href="crud/rentals" class="nav-link">
-                    <i class="nav-icon fas fa-receipt"></i>
-                    <p>Renta</p>
-                </a>
-            </li>
-    
-            <!-- Personal -->
-            <li class="nav-item">
-                <a href="crud/staff" class="nav-link">
-                    <i class="nav-icon fas fa-user-tie"></i>
-                    <p>Personal</p>
-                </a>
-            </li>
-        </ul>
-    </nav>    
-      <!-- /.sidebar-menu -->
+        <!-- Sidebar Menu -->
+        <nav class="mt-2">
+            <ul class="nav nav-pills nav-sidebar flex-column" role="menu">
+                <!-- Actores -->
+                <li class="nav-item">
+                    <a href="crud/actors" class="nav-link">
+                        <i class="nav-icon fas fa-user"></i>
+                        <p>Actores</p>
+                    </a>
+                </li>
+
+                <!-- Clientes -->
+                <li class="nav-item">
+                    <a href="crud/customers" class="nav-link">
+                        <i class="nav-icon fas fa-users"></i>
+                        <p>Clientes</p>
+                    </a>
+                </li>
+
+                <!-- Películas -->
+                <li class="nav-item">
+                    <a href="crud/films" class="nav-link">
+                        <i class="nav-icon fas fa-film"></i>
+                        <p>Películas</p>
+                    </a>
+                </li>
+
+                <!-- Película-Actor -->
+                <li class="nav-item">
+                    <a href="crud/film_actor" class="nav-link">
+                        <i class="nav-icon fas fa-user-tag"></i>
+                        <p>Película-Actor</p>
+                    </a>
+                </li>
+
+                <!-- Película-Categoría -->
+                <li class="nav-item">
+                    <a href="crud/film_category" class="nav-link">
+                        <i class="nav-icon fas fa-list"></i>
+                        <p>Película-Categoría</p>
+                    </a>
+                </li>
+
+                <!-- Película-Texto -->
+                <li class="nav-item">
+                    <a href="crud/film_text" class="nav-link">
+                        <i class="nav-icon fas fa-file-alt"></i>
+                        <p>Película-Texto</p>
+                    </a>
+                </li>
+
+                <!-- Inventario -->
+                <li class="nav-item">
+                    <a href="crud/inventories" class="nav-link">
+                        <i class="nav-icon fas fa-box"></i>
+                        <p>Inventario</p>
+                    </a>
+                </li>
+
+                <!-- Pagos -->
+                <li class="nav-item">
+                    <a href="crud/payments" class="nav-link">
+                        <i class="nav-icon fas fa-dollar-sign"></i>
+                        <p>Pagos</p>
+                    </a>
+                </li>
+
+                <!-- Renta -->
+                <li class="nav-item">
+                    <a href="crud/rentals" class="nav-link">
+                        <i class="nav-icon fas fa-receipt"></i>
+                        <p>Renta</p>
+                    </a>
+                </li>
+
+                <!-- Personal -->
+                <li class="nav-item">
+                    <a href="crud/staff" class="nav-link">
+                        <i class="nav-icon fas fa-user-tie"></i>
+                        <p>Personal</p>
+                    </a>
+                </li>
+                <!-- Direcciones -->
+                <li class="nav-item">
+                    <a href="crud/staff" class="nav-link">
+                        <i class="nav-icon fas fa-map-marker-alt"></i>
+                        <p>Direcciones</p>
+                    </a>
+                </li>
+                <!-- Categorias -->
+                <li class="nav-item">
+                    <a href="crud/categorias" class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>Categorias</p>
+                    </a>
+                </li>
+                <!-- Tiendas -->
+                <li class="nav-item">
+                    <a href="crud/tiendas" class="nav-link">
+                        <i class="nav-icon fas fa-store"></i>
+                        <p>Tiendas</p>
+                    </a>
+                </li>
+                <!-- Paises -->
+                <li class="nav-item">
+                    <a href="crud/paises" class="nav-link">
+                        <i class="nav-icon fas fa-globe-americas"></i>
+                        <p>Paises</p>
+                    </a>
+                </li>
+                <!-- Ciudades -->
+                <li class="nav-item">
+                    <a href="crud/ciudades" class="nav-link">
+                        <i class="nav-icon fas fa-city"></i>
+                        <p>Ciudades</p>
+                    </a>
+                </li>
+                <!-- Idiomas -->
+                <li class="nav-item">
+                    <a href="crud/idiomas" class="nav-link">
+                        <i class="nav-icon fas fa-language"></i>
+                        <p>Idiomas</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- /.sidebar-menu -->
     </div>
     <!-- /.sidebar -->
 </aside>
