--- a/src/app/pagos/pagos.component.html
+++ b/src/app/pagos/pagos.component.html
@@ -1,10 +1,6 @@
 <div class="container-fluid actor-table-container">
   <h2 class="mt-3 mb-4">Pagos</h2>
-
-  <div class="mb-3" *ngIf="!formVisible">
-    <button class="btn btn-success" (click)="showCreateForm()">➕ Nuevo Pago</button>
-  </div>
-
+  <div style="margin-bottom: 15px;"><app-post-pago></app-post-pago></div>
   <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
     <h5>{{ isEditing ? 'Editar Pago' : 'Nuevo Pago' }}</h5>
     <form (ngSubmit)="save()">
@@ -28,7 +24,8 @@
       </div>
       <div class="mb-3">
         <label>Fecha de Pago</label>
-        <input [(ngModel)]="form.payment_date" name="payment_date" type="datetime-local" class="form-control" required />
+        <input [(ngModel)]="form.payment_date" name="payment_date" type="datetime-local" class="form-control"
+          required />
       </div>
       <div class="d-flex gap-2">
         <button type="submit" class="btn btn-primary">{{ isEditing ? 'Actualizar' : 'Crear' }}</button>
@@ -63,9 +60,6 @@
     </table>
   </div>
 
-  <pagination-controls
-    *ngIf="!formVisible"
-    (pageChange)="page = $event"
-    class="d-flex justify-content-center mt-3">
+  <pagination-controls *ngIf="!formVisible" (pageChange)="page = $event" class="d-flex justify-content-center mt-3">
   </pagination-controls>
 </div>
