--- a/src/app/peliculas/peliculas.component.html
+++ b/src/app/peliculas/peliculas.component.html
@@ -1,11 +1,6 @@
 <div class="container-fluid actor-table-container">
     <h2 class="mt-3 mb-4">Lista de Películas</h2>
-  
-    <!-- Botón para mostrar el formulario -->
-    <div class="mb-3" *ngIf="!formVisible">
-      <button class="btn btn-success" (click)="showCreateForm()">➕ Nueva Película</button>
-    </div>
-  
+    <div style="margin-bottom: 15px;"><app-post-pelicula></app-post-pelicula></div>
     <!-- Formulario de crear/editar -->
     <div *ngIf="formVisible" class="mb-4 card p-3 shadow-sm">
       <h5>{{ isEditing ? 'Editar Película' : 'Nueva Película' }}</h5>
@@ -53,8 +48,15 @@
           </div>
           <div class="mb-3 col-md-6">
             <label>Características especiales</label>
-            <input [(ngModel)]="peliculaForm.special_features" name="special_features" class="form-control" />
+            <select [(ngModel)]="peliculaForm.special_features" name="special_features" class="form-select" required>
+              <option value="" disabled selected>Seleccione una opción</option>
+              <option value="Trailers">Trailers</option>
+              <option value="Commentaries">Commentaries</option>
+              <option value="Deleted Scenes">Deleted Scenes</option>
+              <option value="Behind the Scenes">Behind the Scenes</option>
+            </select>
           </div>
+          
         </div>
         <div class="d-flex gap-2">
           <button type="submit" class="btn btn-primary">
